Add routing between components and a navbar component

--- a/src/app/_components/navbar/navbar.component.html
+++ b/src/app/_components/navbar/navbar.component.html
@@ -1,1 +1,11 @@
-<p>navbar works!</p>
+<nav>
+  <div>
+    <a href="/">Logo</a>
+  </div>
+  <div>
+    <a href="" routerLink="/">Products</a>
+    <a href="" routerLink="/account/login">Login</a>
+    <a href="" routerLink="/account/register">Register</a>
+    <a href="" routerLink="/cart">Cart</a>
+  </div>
+</nav>
