--- a/src/app/_components/navbar/navbar.component.html
+++ b/src/app/_components/navbar/navbar.component.html
@@ -7,5 +7,6 @@
     <a href="" routerLink="/account/login">Login</a>
     <a href="" routerLink="/account/register">Register</a>
     <a href="" routerLink="/cart">Cart</a>
+    <button class="btn btn-link nav-item nav-link" (click)="logout()">Logout</button>
   </div>
 </nav>
