--- a/src/app/_components/navbar/navbar.component.html
+++ b/src/app/_components/navbar/navbar.component.html
@@ -1,11 +1,9 @@
-<nav>
+<nav *ngIf="user">
   <div>
     <a href="/">Logo</a>
   </div>
   <div>
     <a href="" routerLink="/">Products</a>
-    <a href="" routerLink="/account/login">Login</a>
-    <a href="" routerLink="/account/register">Register</a>
     <a href="" routerLink="/cart">Cart</a>
     <button class="btn btn-link nav-item nav-link" (click)="logout()">Logout</button>
   </div>
