--- a/src/app/_pages/login/login.component.html
+++ b/src/app/_pages/login/login.component.html
@@ -1,5 +1,6 @@
 <div class="container col-md-6 offset-md-3 mt-5">
   <div *ngIf="error" class="alert alert-danger">{{error}}</div>
+  <div *ngIf="success" class="alert alert-success">{{success}}</div>
   <div class="card">
     <h4 class="card-header">Login</h4>
     <div class="card-body">
@@ -29,4 +30,3 @@
     </div>
   </div>
 </div>
-
