--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -1,1 +1,6 @@
-<h1>Home Page</h1>
+<div class="p-4">
+  <div class="container">
+    <h1>Hi {{user?.firstName}}!</h1>
+    <p>You're logged in with Angular!!</p>
+  </div>
+</div>
