--- a/src/app/_components/navbar/navbar.component.html
+++ b/src/app/_components/navbar/navbar.component.html
@@ -1,7 +1,8 @@
-<nav class="navbar navbar-expand navbar-dark bg-dark px-3" *ngIf="user">
-  <div class="navbar-nav">
-    <a class="nav-item nav-link" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
-    <a class="nav-item nav-link" routerLink="/users" routerLinkActive="active">Users</a>
-    <button class="btn btn-link nav-item nav-link" (click)="logout()">Logout</button>
+<nav class="" *ngIf="user">
+  <div class="">
+    <a class="" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
+    <a class="" routerLink="/cart" routerLinkActive="active">Cart</a>
+    <a class="" routerLink="/users" routerLinkActive="active">Users</a>
+    <button class="" (click)="logout()">Logout</button>
   </div>
 </nav>
