--- a/src/app/_pages/register/register.component.html
+++ b/src/app/_pages/register/register.component.html
@@ -1,43 +1,43 @@
-<div class="container col-md-6 offset-md-3 mt-5">
-  <div class="card">
-    <h4 class="card-header">Register</h4>
-    <div class="card-body">
+<div class="">
+  <div class="">
+    <h4 class="">Register</h4>
+    <div class="">
       <form [formGroup]="form" (ngSubmit)="onSubmit()">
-        <div class="mb-3">
-          <label class="form-label">First Name</label>
+        <div class="">
+          <label class="">First Name</label>
           <input type="text" formControlName="firstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
-          <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
+          <div *ngIf="submitted && f.firstName.errors" class="">
             <div *ngIf="f.firstName.errors.required">First Name is required</div>
           </div>
         </div>
-        <div class="mb-3">
-          <label class="form-label">Last Name</label>
+        <div class="">
+          <label class="">Last Name</label>
           <input type="text" formControlName="lastName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
-          <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
+          <div *ngIf="submitted && f.lastName.errors" class="">
             <div *ngIf="f.lastName.errors.required">Last Name is required</div>
           </div>
         </div>
-        <div class="mb-3">
+        <div class="">
           <label class="form-label">Username</label>
-          <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-          <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+          <input type="text" formControlName="username" class="" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+          <div *ngIf="submitted && f.username.errors" class="">
             <div *ngIf="f.username.errors.required">Username is required</div>
           </div>
         </div>
-        <div class="mb-3">
+        <div class="">
           <label class="form-label">Password</label>
-          <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-          <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+          <input type="password" formControlName="password" class="" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+          <div *ngIf="submitted && f.password.errors" class="">
             <div *ngIf="f.password.errors.required">Password is required</div>
             <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
           </div>
         </div>
         <div>
-          <button [disabled]="loading" class="btn btn-primary">
-            <span *ngIf="loading" class="spinner-border spinner-border-sm me-1"></span>
+          <button [disabled]="loading" class="">
+            <span *ngIf="loading" class=""></span>
             Register
           </button>
-          <a routerLink="../login" class="btn btn-link">Cancel</a>
+          <a routerLink="../login" class="">Cancel</a>
         </div>
       </form>
     </div>
