--- a/src/app/_components/navbar/navbar.component.html
+++ b/src/app/_components/navbar/navbar.component.html
@@ -1,8 +1,30 @@
-<nav class="" *ngIf="user">
-  <div class="">
-    <a class="" routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</a>
-    <a class="" routerLink="/cart" routerLinkActive="active">Cart</a>
-    <a class="" routerLink="/users" routerLinkActive="active">Users</a>
-    <button class="" (click)="logout()">Logout</button>
+<nav class="items-center px-[5%]" *ngIf="user">
+  <div class="w-[100%] h-[10vh] bg-white flex flex-row items-center pt-[3%] shadow rounded-full">
+    <div class=" w-[75%] bg-white flex flex-row pl-[3%] space-x-5">
+      <img src="../../../assets/images/logoSign.png" alt="" class="bg-white w-[45px] h-[45px]" > 
+    </div>
+    <div class="w-[20%] space-x-6 bg-blue-50 items-center flex flex-row">
+    <a class="text-neutral-600 text-[25px] font-bold font-['Poppins']" routerLink="/cart" routerLinkActive="active">Cart</a>
+    <!-- <a class="text-neutral-600 text-[25px] font-bold font-['Poppins']" routerLink="/users" routerLinkActive="active">Users</a> -->
+        <img src="../../../assets/images/cart.png" alt="" class="" routerLink="/cart" routerLinkActive="active">
+    <!-- <button class="" (click)="logout()">Logout</button> -->
+    <div class="relative ml-3">
+      <div>
+        <button type="button" class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800" id="user-menu-button" aria-expanded="false" aria-haspopup="true">
+          <span class="absolute -inset-1.5"></span>
+          <span class="sr-only">Open user menu</span>
+          <img class="h-8 w-8 rounded-full" src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+        </button>
+      </div>
+       <!-- <div *ngIf="showUserMenu()" class="absolute right-0 z-10 mt-2 w-48 origin-top-right rounded-md bg-white py-1 shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none" role="menu" aria-orientation="vertical" aria-labelledby="user-menu-button" tabindex="-1"> -->
+            <!-- Active: "bg-gray-100", Not Active: "" -->
+            <!-- <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-0">Your Profile</a>
+            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-1">Settings</a>
+            <a href="#" class="block px-4 py-2 text-sm text-gray-700" role="menuitem" tabindex="-1" id="user-menu-item-2">Sign out</a>
+          </div> -->
+</div>
+  </div>
   </div>
 </nav>
+
+
