--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -1,6 +1,7 @@
 <div class="p-4">
   <div class="container">
-    <h1>Hi {{user?.firstName}}!</h1>
+    <!-- <h1>Hi {{user?.firstName}}!</h1> -->
+    <div></div>
     <electronics></electronics>
   </div>
 </div>
