--- a/src/app/_components/navbar/navbar.component.html
+++ b/src/app/_components/navbar/navbar.component.html
@@ -34,12 +34,15 @@
       <span class="self-center text-2xl font-black whitespace-nowrap dark:text-white">Easy Buy</span>
     </a>
     <div class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
+      <i class="fa-solid fa-cart-shopping mr-4 text-gray-800 text-lg"></i>
       <button type="button"
               class="flex text-sm bg-gray-800 rounded-full md:me-0 focus:ring-4 focus:ring-gray-300 dark:focus:ring-gray-600"
               id="user-menu-button" aria-expanded="false" data-dropdown-toggle="user-dropdown"
               data-dropdown-placement="bottom">
         <span class="sr-only">Open user menu</span>
-        <img class="w-8 h-8 rounded-full" src="/docs/images/people/profile-picture-3.jpg" alt="user photo">
+        <div>
+          <img class="w-8 h-8 rounded-full" src="/docs/images/people/profile-picture-3.jpg" alt="user photo">
+        </div>
       </button>
       <!-- Dropdown menu -->
       <div
@@ -48,7 +51,7 @@
         <ul class="py-2" aria-labelledby="user-menu-button">
           <li>
             <a href="#"
-               class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white">Sign
+               class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"  (click)="logout()">Sign
               out</a>
           </li>
         </ul>
