--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -1,7 +1,6 @@
 <div class="p-4">
-  <div class="container">
+  <div class="container mx-auto">
     <!-- <h1>Hi {{user?.firstName}}!</h1> -->
-    <div></div>
-    <electronics></electronics>
+    <product></product>
   </div>
 </div>
