--- a/src/app/_components/navbar/navbar.component.html
+++ b/src/app/_components/navbar/navbar.component.html
@@ -31,7 +31,7 @@
 <nav class="bg-white border-gray-200 dark:bg-gray-900">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <span class="self-center text-2xl font-black whitespace-nowrap dark:text-white">Easy Buy</span>
+      <span class="self-center text-2xl font-black whitespace-nowrap dark:text-white text-sky-800">EasyBuy</span>
     </a>
     <div class="flex items-center md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
       <i class="fa-solid fa-cart-shopping mr-4 text-gray-800 text-lg"></i>
