--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -1,6 +1,7 @@
-<div class="p-4">
-  <div class="container mx-auto">
+<div>
+  <div class="md:container md:mx-auto p-8">
     <!-- <h1>Hi {{user?.firstName}}!</h1> -->
+    <h1 class="md:text-lg my-4 font-medium">All Products</h1>
     <product></product>
   </div>
 </div>
