--- a/src/app/_components/navbar/navbar.component.html
+++ b/src/app/_components/navbar/navbar.component.html
@@ -29,7 +29,7 @@
 
 
 <nav class="bg-white border-gray-200 dark:bg-gray-900" *ngIf="user">
-  <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+  <div class="container flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
       <span class="self-center text-2xl font-black whitespace-nowrap dark:text-white text-sky-800">EasyBuy</span>
     </a>
