Edit Mens page: styling

--- a/src/app/_components/product/product.component.html
+++ b/src/app/_components/product/product.component.html
@@ -1,5 +1,7 @@
 <div class="md:grid md:gap-6 md:grid-cols-4">
-  <div class="space-y-4 md:p-4 p-8 shadow rounded-[20px]" *ngFor="let product of products">
+  <div class="space-y-4 md:p-4 p-8 shadow rounded-[20px] hover:scale-110 cursor-pointer duration-700	" *ngFor="let
+  product of
+  products">
     <img class="w-[400px] h-[254px] ml-4 object-contain" [src]="product.image" alt="product.title" />
     <h2 class="flex-wrap text-xl truncate font-semibold">{{product.title}}</h2>
     <p class="truncate">{{product.description}}</p>
