--- a/src/app/_components/navbar/navbar.component.html
+++ b/src/app/_components/navbar/navbar.component.html
@@ -1,9 +1,9 @@
-<nav class="bg-white border-gray-200 dark:bg-gray-900" *ngIf="user">
+<nav class="bg-white border-gray-200 dark:bg-gray-900">
   <div class="container flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
       <span class="self-center text-2xl font-black whitespace-nowrap dark:text-white text-sky-800">EasyBuy</span>
     </a>
-    <div class="flex items-center md:order-2 space-x-3 md:space-x-4 rtl:space-x-reverse" *ngIf="user" ><div
+    <div class="flex items-center md:order-2 space-x-3 md:space-x-4 rtl:space-x-reverse" ><div
       class="relative">
       <i class="fa-solid fa-cart-shopping text-gray-800 text-2xl cursor-pointer" routerLink="/cart"></i>
       <span class="absolute top-0 right-0 inline-block bg-red-500  text-white text-xs px-1 rounded-full">{{
