--- a/src/app/_pages/cart/cart.component.html
+++ b/src/app/_pages/cart/cart.component.html
@@ -44,12 +44,12 @@
         </div>
 
     </div>
-    <div *ngFor="let product of cartItems">
+    <div>
         <h2 class="text-2xl font-bold text-black ">Summary</h2>
         <div class="flex items-center justify-between mt-4">
 
             <p class="text-black">Total Price: $ {{ cartService.getTotalPrice() }}</p>
-            <p>{{product.quantity}} Item(s)</p>
+            <p>{{cartService.getItemCount()}} Item(s)</p>
         </div>
         <div>
             <button
