--- a/src/app/_components/navbar/navbar.component.html
+++ b/src/app/_components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="bg-white border-gray-200 dark:bg-gray-900">
+<nav class="bg-white border-gray-200 dark:bg-gray-900 sticky top-0 overscroll-none">
   <div class="container flex flex-wrap items-center justify-between mx-auto p-4">
     <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
       <span class="self-center text-2xl font-black whitespace-nowrap dark:text-white text-sky-800">EasyBuy</span>
@@ -23,11 +23,18 @@
         class="z-50 hidden my-4 text-base list-none bg-white divide-y divide-gray-100 rounded-lg shadow dark:bg-gray-700 dark:divide-gray-600"
         id="user-dropdown">
         <ul class="py-2" aria-labelledby="user-menu-button">
-          <li>
+          <li *ngIf="user">
             <a href="#"
                class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white"  (click)="logout()">Sign
               out</a>
+
           </li>
+            <li *ngIf="!user">
+                <a href="#"
+                   class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white" routerLink="/account/login">Sign In</a>
+                <a href="#"
+                   class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100 dark:hover:bg-gray-600 dark:text-gray-200 dark:hover:text-white" routerLink="/account/register">Sign Up</a>
+            </li>
         </ul>
       </div>
       <button data-collapse-toggle="navbar-user" type="button"
