--- a/src/app/_pages/login/login.component.html
+++ b/src/app/_pages/login/login.component.html
@@ -14,7 +14,7 @@
 
         <!-- Form -->
         <form [formGroup]="form" (ngSubmit)="onSubmit()" class="w-2/3 space-y-4">
-            <input type="text"
+            <input type="email"
                    formControlName="email"
                    placeholder="Email"
                    class="w-full px-4 py-3 text-gray-800 bg-gray-200 rounded"
