--- a/src/app/_pages/register/register.component.html
+++ b/src/app/_pages/register/register.component.html
@@ -23,7 +23,7 @@
                 <div *ngIf="f.lastName.errors.required">Last Name is required</div>
             </div>
 
-            <input type="text" formControlName="email" placeholder="Email"
+            <input type="email" formControlName="email" placeholder="Email"
                    class="w-full px-4 py-2 text-black border-b-2 border-gray-300 focus:outline-none bg-gray-100"
                    [ngClass]="submitted && f.email.errors ? 'border-red-500' : ''">
             <div *ngIf="submitted && f.email.errors" class="text-red-500">
