change checkout button when cart is empty

--- a/src/app/_pages/cart/cart.component.html
+++ b/src/app/_pages/cart/cart.component.html
@@ -29,7 +29,8 @@
         <div>
             <button
                 class="text-white shadow hover:shadow-lg bg-green-500  mt-4 px-3 py-4 rounded-md text-sm font-medium w-full"
-                routerLink="/payment">Checkout
+                routerLink="/payment" [ngClass]="{'bg-gray-600': cartService.getItemCount() === 0}"
+            >Checkout
             </button>
             <button
                 class="shadow hover:shadow-md text-gray-800 my-4 px-3 py-4 rounded-md text-sm font-medium w-full"
