Add footer and sub

--- a/src/app/_pages/home/home.component.html
+++ b/src/app/_pages/home/home.component.html
@@ -57,5 +57,17 @@
 
       <h1 class="md:text-lg my-4 font-medium">All Products</h1>
     <product></product>
+
   </div>
+    <div class="flex py-8 px-24 bg-gray-600 text-white">
+        <div class="w-1/2 space-x-2">
+            <h2 class="text-3xl font-semibold">Sign Up for our newsletter.</h2>
+            <p class="tex-sm">Get E-Mail updates about latest trends and <span class="text-sky-400">offers.</span></p>
+        </div>
+        <div class="mb-6 flex w-1/2">
+
+            <input type="text" id="default-input" class="bg-gray-50 border border-gray-300 text-gray-900 text-sm focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
+            <button class="px-8 bg-yellow-400 ">Subscribe</button>
+        </div>
+    </div>
 </div>
